--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "~1.9.0",
     "passport": "latest",
     "passport-local": "latest",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socketio-auth": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
